--- a/Tutorial_classification_astromer.ipynb
+++ b/Tutorial_classification_astromer.ipynb
@@ -404,14 +404,15 @@
         "                 epochs=500,\n",
         "                 validation_data=val_data ,\n",
         "                 callbacks=[estop],\n",
-        "                 verbose=1)"
+        "                 verbose=0)"
       ],
       "metadata": {
         "id": "fRO1hth377tP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1128a29-ba18-4d7d-a244-4e621a97440a"
+        "outputId": "b1128a29-ba18-4d7d-a244-4e621a97440a",
+        "collapsed": true
       },
       "execution_count": 11,
       "outputs": [
